workng: on pagination

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,6 +27,7 @@
         </form>
     <div id="story" >
             <div id="main"></div>
+            <div id="more"></div>
             </div>
 
 
